2002-08-04  Max Horn  <max@quendi.de>

	* PkgVersion.pm: Patch #588476 (Java support) by Sylvain Cuaz.

	* Fixed bug #548373 (package DB read thrice). It is not only read twice
	  (the new package manager may support new features, and thus must rebuild
	  the database once more)

	* Engine.pm: Patch #588705: Automates passing on the options
	  (by Sylvain Cuaz)

2002-08-03  Max Horn  <max@quendi.de>

	* Services.pm: Fixed read_properties_multival, it was broken by the
	  RuntimeVars patch.

	* PkgVersion.pm, Services.pm: Patch #579210: RuntimeVars field added
	  (thanks to Sylvain Cuaz for this)

2002-07-31  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Small fix to Configure.pm for the verbosity level selection,
	  which was reported not working. Should be fine now.

2002-07-28  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Added /sbin and /usr/sbin to the clean env since some pkgs need
	  stuff like chown or chmod to install properly.

2002-07-26  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Changed spacing in fink list easier to use with awk or cut
	* added a space before pkg list for better seperation of info

2002-07-26  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Services.pm: Fix for the Jag Argument "M-?M-^?M-X" isn't numeric
	  in numeric eq (==) at /sw/lib/perl5/Fink/Engine.pm line 330, <SW_VERS>
	  line 2. Bug.  But COLUMNS needs to bet exported in init.{csh, sh}

2002-07-25  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Services.pm: Temp Fix for the Jag Argument "M-?M-^?M-X" isn't numeric
	  in numeric eq (==) at /sw/lib/perl5/Fink/Engine.pm line 330, <SW_VERS>
	  line 2. Bug.  Need better fix in future, maybe read $ENV{COLUMNS}

2002-07-25  Max Horn  <max@quendi.de>
	
	* PkgVersion.pm: Fixed Bootstrap (use /usr/bin/gnutar if %p/bin/tar is missing)

	* Engine.pm: Little fix that ensures Fink runs even if not on a terminal.
	
2002-07-24  Max Horn  <max@quendi.de>
